--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -45,4 +45,9 @@ body
     font-size: 2rem
     letter-spacing: -3px
 
+#mainTitle
+    @include lt-md
+        font-size: 15px
+        letter-spacing: 1px
+
 @import '../bulma/bulma'
