--- a/feria-a-montevideo/templates/base.html
+++ b/feria-a-montevideo/templates/base.html
@@ -38,7 +38,7 @@
                             <!--                                <img src="{{config.base_url}}/images/icon2.png">-->
                             <!--                            </figure>-->
                         </div>
-                        <p class="has-text-centered" id="mainTitle">9° Feria del Libro Anarquista 🏴📖</p>
+                        <p class="has-text-centered" id="mainTitle">9° FERIA DEL LIBRO ANARQUISTA 🏴📖</p>
                         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
                             <span aria-hidden="true"></span>
                             <span aria-hidden="true"></span>
@@ -70,7 +70,7 @@
             <div class="content">
                 <span class="icon-text mlt-6">
                     <span>
-                        <strong>TRANSFORMA LA INDIGNACIÓN EN LUCHA Y RESISTENCIA </strong>
+                        <strong>TRANSFORMÁ LA INDIGNACIÓN EN LUCHA Y RESISTENCIA </strong>
                         <span class="icon animate__animated animate__headShake animate__infinite" style="margin-left: 10px;">
                             <i class="fas fa-bomb fa-2x"></i>
                         </span>
