--- a/feria-a-montevideo/templates/base.html
+++ b/feria-a-montevideo/templates/base.html
@@ -79,7 +79,7 @@
             </div>
             <span class="icon-text">
                 <span>
-                    <a href="https://github.com/social-y-directa-es-la-lucha/blog-1.git">
+                    <a href="https://www.facebook.com/feriaanarquistamvd">
                         Facebook <i class="fab fa-facebook"></i></span></a>
                 <span> |
                     <a href="https://github.com/social-y-directa-es-la-lucha/blog-1.git">
