--- a/feria-a-montevideo/templates/base.html
+++ b/feria-a-montevideo/templates/base.html
@@ -80,7 +80,7 @@
             <span class="icon-text">
                 <span>
                     <a href="https://www.facebook.com/feriaanarquistamvd">
-                        Facebook <i class="fab fa-facebook"></i></span></a>
+                        Facebook</i></span></a>
                 <span> |
                     <a href="https://github.com/social-y-directa-es-la-lucha/blog-1.git">
                         Código libre</span></a>
