--- a/feria-a-montevideo/templates/index.html
+++ b/feria-a-montevideo/templates/index.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 <div class="columns">
-    <div class="column is-two-thirds animate__animated animate__slideInUp">
+    <div class="column is-two-thirds">
         <section class="section">
             <div>
                 <div class="columns">
-                    <div class="column">
+                    <div class="column animate__animated animate__slideInLeft">
                         <div
-                            class="box has-background-danger-dark animate__animated animate__pulse animate__infinite animate__slow">
+                            class="box has-background-danger-dark animate__pulse animate__infinite animate__slow">
                             <figure class="image">
                                 <img src="https://i.ibb.co/9VM4n7x/afiche-feria.jpg">
                             </figure>
                         </div>
                     </div>
-                    <div class="column is-centered">
+                    <div class="column is-centered animate__animated animate__slideInUp">
                         <div class="block">
                             <div class="box">
                                 <h3 class="subtitle introductionSub">{{
