--- a/feria-a-montevideo/templates/index.html
+++ b/feria-a-montevideo/templates/index.html
@@ -8,7 +8,7 @@
                 <div class="columns">
                     <div class="column animate__animated animate__slideInLeft">
                         <div
-                            class="box has-background-danger-dark animate__pulse animate__infinite animate__slow">
+                            class="box has-background-danger-dark animate__animated animate__pulse animate__infinite animate__slow">
                             <figure class="image">
                                 <img src="https://i.ibb.co/9VM4n7x/afiche-feria.jpg">
                             </figure>
