--- a/feria-a-montevideo/templates/contact.html
+++ b/feria-a-montevideo/templates/contact.html
@@ -7,24 +7,24 @@
 {% block content %}
 <h3>Contactanos</h3>
 <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
-    <label for="Name" class="fcf-label">Your name</label>
+    <label for="Name" class="fcf-label">¿Cómo te contactamos?</label>
     <div class="fcf-input-group">
         <input type="text" id="Name" name="Name" class="fcf-form-control" required>
     </div>
     <div class="fcf-form-group">
-        <label for="Email" class="fcf-label">Your email address</label>
+        <label for="Email" class="fcf-label">Un Email</label>
         <div class="fcf-input-group">
             <input type="email" id="Email" name="Email" class="fcf-form-control" required>
         </div>
         <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Your message</label>
+            <label for="Message" class="fcf-label">Mensaje</label>
             <div class="fcf-input-group">
                 <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000"
                     required></textarea>
             </div>
         </div>
         <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send</button>
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Enviar</button>
         </div>
     </div>
 </form>
