--- a/feria-a-montevideo/templates/404.html
+++ b/feria-a-montevideo/templates/404.html
@@ -5,7 +5,7 @@
 <section class="section">
   <div class="container">
     <div class="has-text-centered">
-      <h1 class="title is-2">Volvé más tarde</h1>
+      <h1 class="title is-2">Vuelve más tarde</h1>
       <p class="subtitle is-4">
         Aún estamos trabajando en esta pestaña
       </p>
