--- a/feria-a-montevideo/templates/contact.html
+++ b/feria-a-montevideo/templates/contact.html
@@ -5,27 +5,100 @@
 {% endblock %}
 
 {% block content %}
-<h3>Contactanos</h3>
-<form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
-    <label for="Name" class="fcf-label">¿Cómo te contactamos?</label>
-    <div class="fcf-input-group">
-        <input type="text" id="Name" name="Name" class="fcf-form-control" required>
-    </div>
-    <div class="fcf-form-group">
-        <label for="Email" class="fcf-label">Un Email</label>
-        <div class="fcf-input-group">
-            <input type="email" id="Email" name="Email" class="fcf-form-control" required>
-        </div>
-        <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Mensaje</label>
-            <div class="fcf-input-group">
-                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000"
-                    required></textarea>
-            </div>
-        </div>
-        <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Enviar</button>
-        </div>
-    </div>
-</form>
+
+<div class="container">
+    <section class="section">
+        <div>
+            <form id="contact_form">
+                <div class="field">
+                    <label class="label">Cómo te llamamos?</label>
+                    <div class="control">
+                        <input class="input" type="text" placeholder="Nombre">
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label class="label">Email</label>
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input" type="email" placeholder="ejemplo@email.com" value="">
+                        <span class="icon is-small is-left">
+                      <i class="fas fa-envelope"></i>
+                    </span>
+
+                        <div class="field">
+                            <label class="label">Mensaje</label>
+                            <div class="control">
+                                <textarea class="textarea" placeholder="Texto"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="field is-grouped">
+                            <div class="control">
+                                <button class="button is-link">Enviar</button>
+                            </div>
+                        </div>
+                        <div id="success_message" style="width:100%; height:100%; display:none; ">
+                            <h2>Éxito! Responderemos lo más pronto posible</h2>
+                        </div>
+                    </div>
+            </form>
+    </section>
+</div>
+{% endblock %}
+
+{% block custom_js %}
+<script src="">
+    $(function()
+{
+    function after_form_submitted(data)
+    {
+        if(data.result == 'success') {
+            $('form#reused_form').hide();
+            $('#success_message').show();
+            $('#error_message').hide();
+        }
+        else
+        {
+            $('#error_message').append('<ul></ul>');
+
+            jQuery.each(data.errors,function(key,val)
+            {
+                $('#error_message ul').append('<li>'+key+':'+val+'</li>');
+            });
+            $('#success_message').hide();
+            $('#error_message').show();
+            $('button[type="button"]', $form).each(function()
+            {
+                $btn = $(this);
+                label = $btn.prop('orig_label');
+                if(label)
+                {
+                    $btn.prop('type','submit' );
+                    $btn.text(label);
+                    $btn.prop('orig_label','');
+                }
+            });
+        }
+    }
+	$('#contact_form').submit(function(e)
+      {
+        e.preventDefault();
+        $form = $(this);
+        $('button[type="submit"]', $form).each(function()
+        {
+            $btn = $(this);
+            $btn.prop('type','button' );
+            $btn.prop('orig_label',$btn.text());
+            $btn.text('Enviando ...');
+        });
+        $.ajax({
+            type: "POST",
+            url: 'index.php',
+            data: $form.serialize(),
+            success: after_form_submitted,
+            dataType: 'json'
+        });
+      });
+});
+</script>
 {% endblock %}
