--- a/feria-a-montevideo/templates/base.html
+++ b/feria-a-montevideo/templates/base.html
@@ -87,6 +87,9 @@
                 <span class="icon">
                     <i class="fas fa-code"></i>
                 </span>
+                <span class="icon">
+                    <i class="fas fa-mail"></i>
+                </span>
             </span>
         </div>
     </footer>
