--- a/feria-a-montevideo/templates/crono.html
+++ b/feria-a-montevideo/templates/crono.html
@@ -58,9 +58,13 @@
                         </div>
                         <div btn_id="1" class="message-body">
                             Una experiencia lúdica para repensarnos.
-                            ¿Qué mecanismos patriarcales operan a la hora de vincularnos en nuestros espacios? ¿Qué esfuerzos concretos hacemos por transformarnos y transformar nuestro entorno?
-                            La cultura patriarcal en la que crecemos nos enseña formas concretas de relacionarnos y por eso el anarquismo como práctica colectiva se propone desaprender lo que nos ha sido impuesto. Sabemos que desenraizar nuestras actitudes machistas no es tarea sencilla.
-                            En esta actividad proponemos un juego de mesa como catalizador. Para ponernos en juego desde otros lugares, para mirarnos entre compas y enseñarnos entre nosotrxs formas más propias.
+                            ¿Qué mecanismos patriarcales operan a la hora de vincularnos en nuestros espacios? ¿Qué
+                            esfuerzos concretos hacemos por transformarnos y transformar nuestro entorno?
+                            La cultura patriarcal en la que crecemos nos enseña formas concretas de relacionarnos y por
+                            eso el anarquismo como práctica colectiva se propone desaprender lo que nos ha sido
+                            impuesto. Sabemos que desenraizar nuestras actitudes machistas no es tarea sencilla.
+                            En esta actividad proponemos un juego de mesa como catalizador. Para ponernos en juego desde
+                            otros lugares, para mirarnos entre compas y enseñarnos entre nosotrxs formas más propias.
                         </div>
                     </article>
                     <article class="message is-dark">
@@ -134,6 +138,14 @@
                 </div>
             </div>
         </div>
+        <button class="button is-large is-danger is-light">
+            <a href='{{ config.base_url }}'>
+          <span class="icon">
+            <i class="fas fa-home"></i>
+          </span>
+                <span>Inicio</span>
+            </a>
+        </button>
     </section>
 </div>
 {% endblock %}
@@ -155,6 +167,9 @@
                 });
             });
         });
+
+
+
 
 
 </script>
