--- a/feria-a-montevideo/templates/crono.html
+++ b/feria-a-montevideo/templates/crono.html
@@ -146,6 +146,14 @@
                 <span>Inicio</span>
             </a>
         </button>
+        <button class="button is-large is-danger is-light">
+            <a href='{{ config.base_url }}'>
+          <span class="icon">
+              <i class="fas fa-map-marked-alt"></i>
+          </span>
+                <span>Ubicación</span>
+            </a>
+        </button>
     </section>
 </div>
 {% endblock %}
@@ -167,6 +175,7 @@
                 });
             });
         });
+
 
 
 
