--- a/feria-a-montevideo/templates/ubication.html
+++ b/feria-a-montevideo/templates/ubication.html
@@ -24,7 +24,7 @@
                     Daniel Muñoz 2218
                 </p>
                 <p class="subtitle">
-                    (Entre Juan Paullier y Cufré) <br><br>
+                    Entre Juan Paullier y Cufré, Montevideo<br><br>
                     <a href="https://maps.google.com/maps/dir//Daniel+Mu%C3%B1oz+2218+11200+Montevideo,+Departamento+de+Montevideo/@-34.8960824,-56.1692511,17z/data=!4m5!4m4!1m0!1m2!1m1!1s0x959f80527b55b7d1:0x387468a92b08e683">
                         <i class="fas fa-location-arrow"></i>
                         Direcciones (Google Maps)
