--- a/feria-a-montevideo/templates/ubication.html
+++ b/feria-a-montevideo/templates/ubication.html
@@ -6,19 +6,21 @@
 
 {% block content %}
 <div class="columns">
-    <div class="box">
-        <div class="gmap_canvas">
-            <iframe width="1080" height="500" id="gmap_canvas"
-                    src="https://maps.google.com/maps?q=2218,%20Daniel%20Mu%C3%B1oz,%20Uruguay&t=&z=17&ie=UTF8&iwloc=&output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            <a href="https://www.whatismyip-address.com"></a><br>
-            <style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}</style>
-            <a href="https://www.embedgooglemap.net">google maps websites</a>
-            <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style>
+    <div class="column">
+        <div class="box is-centered ">
+            <div class="gmap_canvas">
+                <iframe width="1080" height="500" id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=2218,%20Daniel%20Mu%C3%B1oz,%20Uruguay&t=&z=17&ie=UTF8&iwloc=&output=embed"
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                <a href="https://www.whatismyip-address.com"></a><br>
+                <style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}</style>
+                <a href="https://www.embedgooglemap.net">google maps websites</a>
+                <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style>
+            </div>
         </div>
     </div>
     <div class="column">
-        <section class="hero is-danger is-medium">
+        <section class="hero is-danger is-large">
             <div class="hero-body">
                 <p class="title">
                     Daniel Muñoz 2218
