--- a/feria-a-montevideo/templates/ubication.html
+++ b/feria-a-montevideo/templates/ubication.html
@@ -16,6 +16,7 @@
                 <style>.mapouter{position:relative;text-align:right;height:500px;width:1080px;}</style>
                 <a href="https://www.embedgooglemap.net">google maps websites</a>
                 <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1080px;}</style>
+                <style>iframe {width:100%;height:100%;}</style>
             </div>
         </div>
     </div>
