--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -50,6 +50,20 @@ body
         font-size: 10px
         letter-spacing: 1px
 
+.mapouter
+    position:relative
+    text-align:right
+    height:500px
+    width:1080px
+.gmap_canvas
+    overflow:hidden
+    background:none !important
+    height:500px
+    width:1080px
+.iframe
+    width:100%
+    height:100%
+
 .message.has-text
     cursor: pointer
 
