--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -50,10 +50,14 @@ body
         font-size: 10px
         letter-spacing: 1px
 
-
 .iframe
     width: 100%
     height: 100%
+
+.iframe
+    @include lt-md
+      width: 50%
+      height: 50%
 
 .message.has-text
     cursor: pointer
