--- a/feria-a-montevideo/templates/ubication.html
+++ b/feria-a-montevideo/templates/ubication.html
@@ -8,9 +8,11 @@
 <div class="columns">
     <div class="column">
         <div class="box is-centered">
-            <iframe width="800" height="600" id="gmap_canvas"
-                    src="https://maps.google.com/maps?q=2218,%20Daniel%20Mu%C3%B1oz,%20Uruguay&t=&z=17&ie=UTF8&iwloc=&output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            <div class="map-responsive">
+                <iframe width="600" height="450" style="border:0" id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=2218,%20Daniel%20Mu%C3%B1oz,%20Uruguay&t=&z=17&ie=UTF8&iwloc=&output=embed"
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            </div>
         </div>
     </div>
     <div class="column">
