--- a/feria-a-montevideo/sass/style.sass
+++ b/feria-a-montevideo/sass/style.sass
@@ -50,14 +50,18 @@ body
         font-size: 10px
         letter-spacing: 1px
 
-.iframe
-    @include lt-md
-      width: 100%
-      height: 100%
+.map-responsive
+    overflow: hidden
+    padding-bottom: 56.25%
+    position: relative
+    height: 0
 
-.iframe
-      width: 50%
-      height: 50%
+.map-responsive iframe
+    left: 0
+    top: 0
+    height: 100%
+    width: 100%
+    position: absolute
 
 .message.has-text
     cursor: pointer
