--- a/feria-a-montevideo/templates/ubication.html
+++ b/feria-a-montevideo/templates/ubication.html
@@ -16,16 +16,27 @@
         </div>
     </div>
     <div class="column">
-        <section class="hero is-danger is-large">
+        <section class="hero is-danger is-medium">
             <div class="hero-body">
                 <p class="title">
-                    Daniel Muñoz 2218
+                    Viernes
                 </p>
                 <p class="subtitle">
-                    Entre Juan Paullier y Cufré, Montevideo<br><br>
+                    Centro Social Cordón Norte<br> Joaquín Requena Esq. Daniel Muñóz<br><br>
+                    <a href="https://maps.google.com/maps/dir//Centro+Social+Gastronomia+Integral+Daniel+Mu%C3%B1oz+2167+11200+Montevideo,+Departamento+de+Montevideo/@-34.8960292,-56.1711042,19z/data=!4m5!4m4!1m0!1m2!1m1!1s0x959f804d94018047:0xd50864cf6b33a9b">
+                        <i class="fas fa-location-arrow"></i>
+                        Dirección
+                    </a>
+                </p>
+                <br><br>
+                <p class="title">
+                    Sábado y Domingo
+                </p>
+                <p class="subtitle">
+                    Daniel Muñoz 2218<br><br>
                     <a href="https://maps.google.com/maps/dir//Daniel+Mu%C3%B1oz+2218+11200+Montevideo,+Departamento+de+Montevideo/@-34.8960824,-56.1692511,17z/data=!4m5!4m4!1m0!1m2!1m1!1s0x959f80527b55b7d1:0x387468a92b08e683">
                         <i class="fas fa-location-arrow"></i>
-                        Direcciones (Google Maps)
+                        Dirección
                     </a>
                 </p>
             </div>
