--- a/feria-a-montevideo/templates/index.html
+++ b/feria-a-montevideo/templates/index.html
@@ -8,7 +8,7 @@
                 <div class="columns">
                     <div class="column animate__animated animate__slideInLeft">
                         <div
-                            class="box has-background-danger-dark animate__animated animate__pulse animate__infinite animate__slow">
+                                class="box has-background-danger-dark animate__animated animate__pulse animate__infinite animate__slow">
                             <figure class="image">
                                 <img src="https://i.ibb.co/9VM4n7x/afiche-feria.jpg">
                             </figure>
@@ -46,7 +46,12 @@
                                 </a>
                             </div>
                         </div>
-                        
+                        <div class="box">
+
+                            <figure class="image">
+                                <img src="https://i.postimg.cc/XJR5cpg8/image.png">
+                            </figure>
+                        </div>
                     </div>
                 </div>
                 <!--                <div class="box">-->
@@ -62,7 +67,7 @@
         <div class="section">
             <div class="box has-background-danger-dark">
                 <figure class="image is-2by3 is-flex is-justify-content-center">
-                    <img src="https://i.ibb.co/vYxhwtg/afiche-feria-2.jpg" />
+                    <img src="https://i.ibb.co/vYxhwtg/afiche-feria-2.jpg"/>
                 </figure>
             </div>
             <form class="box" id="target">
@@ -70,7 +75,7 @@
                     <label class="label">Email</label>
                     <div class="control">
                         <input name="Email" class="input is-danger" type="email"
-                            placeholder="ej. juan@hotmail.com">
+                               placeholder="ej. juan@hotmail.com">
                     </div>
                     <label id="alertLabel" class="label"></label>
                 </div>
@@ -95,5 +100,6 @@
         });
         return;
     });
+
 </script>
 {% endblock %}
