--- a/feria-a-montevideo/templates/crono.html
+++ b/feria-a-montevideo/templates/crono.html
@@ -30,11 +30,6 @@
                             20:30hs | Presentación de Charlas
                         </div>
                     </article>
-                    <article class="message is-dark">
-                        <div class="message-body">
-                            21:30hs | Cena
-                        </div>
-                    </article>
                 </div>
             </div>
         </div>
@@ -128,7 +123,30 @@
                     </article>
                     <article btn_id="3" class="message is-danger">
                         <div class="message-body">
-                            15:00hs a 17:00hs | Charla: Falsa Dicotomía
+                            15:00hs a 17:00hs | Charla: ¿Revolución social o insurrección permanente? ¿Puede el
+                            anarquismo del siglo XXI transitar el camino hacia la Anarquía?
+                        </div>
+                        <div class="message-body text">
+                            A principios del siglo pasado las ideas anarquistas predominantes tenían un carácter
+                            indiscutiblemente político y social, partían de un corte opresivo transversal - la clase - y
+                            buscaban la superación colectiva del modelo social imperante para la construcción de una
+                            nueva
+                            sociedad sin oprimidos ni opresores. Después del fracaso de los modelos del socialismo real,
+                            pasada la segunda mitad del siglo pasado y consolidándose de manera definitiva a principios
+                            de
+                            esta, toma cada vez mas fuerza un anarquismo vivencial, que se construye e interpreta a si
+                            mismo
+                            en tiempo presente: ya no es la apuesta por la construcción de un futuro colectivo, sino la
+                            urgencia por un presente individual de lucha. Independientemente de las propuestas de
+                            antagonismo, el principio y final del análisis surge de la percepción de múltiples
+                            opresiones
+                            que pesan en el individuo como un estigma, y será entonces una tarea personal, cotidiana y
+                            continua la lucha por la emancipación. La anarquía aqui y ahora, a través de mis prácticas
+                            anárquicas.
+                            En esta charla nos proponemos desmenuzar un poco estas diferencias, encontrar el hilo
+                            conductor,
+                            y descubrir si existe todavía un horizonte de superación colectiva de la opresión, si la
+                            revolución social todavía es posible, deseable o necesaria.
                         </div>
                     </article>
                     <article class="message has-text">
@@ -196,5 +214,9 @@
                 }
             });
         });
+
+
+
+
 </script>
 {% endblock %}
