--- a/feria-a-montevideo/templates/crono.html
+++ b/feria-a-montevideo/templates/crono.html
@@ -121,7 +121,7 @@
                             15:00hs | Apertura de la feria
                         </div>
                     </article>
-                    <article btn_id="3" class="message is-danger">
+                    <article class="message has-text">
                         <div class="message-body">
                             15:00hs a 17:00hs | Charla: ¿Revolución social o insurrección permanente? ¿Puede el
                             anarquismo del siglo XXI transitar el camino hacia la Anarquía?
