--- a/feria-a-montevideo/templates/crono.html
+++ b/feria-a-montevideo/templates/crono.html
@@ -165,9 +165,21 @@
                             alternativos y en permanente diálogo horizontal y autogestivo.
                         </div>
                     </article>
-                    <article btn_id="4" class="message is-danger">
+                    <article btn_id="4" class="message has-text">
                         <div class="message-body">
-                            18:30hs a 20:30hs | Charla: Proyectos Territoriales
+                            18:30hs a 20:30hs | Charla: Autoorganización territorial
+                        </div>
+                        <div class="message-body text">
+                            Lo posible comienza con un acto de desobediencia, la imaginación se abre camino en lo ya
+                            dado, creando lo nuevo, lo que hasta ayer no se podía pensar. ¿Cómo se organizaría
+                            colectivamente un territorio, una ciudad, un barrio desde bases o influencias anarquistas?
+                            ¿Cómo en la práctica una sociedad compleja (tecnologizada, violenta, acostumbrada a la
+                            dependencia) como la actual podría construir modos de existencia basados en el mutuo apoyo
+                            si se viera obligada por las circunstancias a ello? Proponemos hacer el ejercicio de
+                            imaginar colectivamente sobre el hoy, sobre nuestra cultura, sobre el contexto actual y no
+                            sobre un posible futuro abstracto, las posibilidades de desarrollos sustentables,
+                            antiautoritarios y colectivos.
+                            A cargo de Anarquistas Cordón.
                         </div>
                     </article>
                     <article class="message is-dark">
@@ -214,6 +226,7 @@
                 }
             });
         });
+
 
 
 
