--- a/feria-a-montevideo/templates/crono.html
+++ b/feria-a-montevideo/templates/crono.html
@@ -36,9 +36,14 @@
                             otros lugares, para mirarnos entre compas y enseñarnos entre nosotrxs formas más propias.
                         </div>
                     </article>
-                    <article class="message is-dark">
+                    <article class="message has-text">
                         <div class="message-body">
                             17:30hs | Carteo a compañerxs presxs
+                        </div>
+                        <div class="message-body text">
+                            Nos proponemos generar un espacio para solidarizarnos de manera concreta con lxs compañerxs que se encuentran en situación de encierro carcelario, una de las tantas formas de encierro de las que se vale el sistema para mantenerse en pié. Como anarquistas sabemos que en la cárcel no se acaba nada y que es en cambio una nueva trinchera de lucha. A su vez no desconocemos que está creada para intentar destruir a nuestrxs compañerxs, el aislamiento es por ejemplo una de las formas más crueles de reclusión. En todos los casos, pero en estos especialmente las cartas permiten establecer un contacto fluido con el exterior, ese contacto que es imprescindible para poder resistir el constante hostigamiento y la vida dentro de las lógicas carcelarias que por definición van en el sentido contrario.
+                            La invitación es a quitarnos los miedos y la vergüenza que nos puede generar escribir por primera vez y ejercitar una práctica, que por pasada de moda, no deja de ser una forma de estar en contacto afectuoso y revolucionario con nuestrxs compañerxs.
+                            ¡Hasta que todas las jaulas estén vacías! ¡Presxs a la calle!
                         </div>
                     </article>
                     <article class="message has-text">
